# dynqbf

./: INSTALL  Makefile  README  README.md
src/: AbortException.h  Application.cpp  Application.h  BDDManager.cpp  BDDManager.h  BaseNSFManager.cpp  BaseNSFManager.h  CMakeLists.txt  Computation.cpp  Computation.h  Decomposer.cpp  Decomposer.h  DynQBFConfig.h.in  HGInputParser.cpp  HGInputParser.h  HeuristicNSFManager.cpp  HeuristicNSFManager.h  Instance.cpp  Instance.h  Module.cpp  Module.h  NSF.cpp  NSF.h  NSFManager.cpp  NSFManager.h  Ordering.cpp  Ordering.h  Preprocessor.cpp  Preprocessor.h  Printer.cpp  Printer.h  Solver.cpp  Solver.h  SolverFactory.cpp  SolverFactory.h  TmpCacheComputation.cpp  TmpCacheComputation.h  TmpComputation.cpp  TmpComputation.h  TmpComputationManager.cpp  (+6 more)
src/decomposer/: Dummy.cpp  Dummy.h  HTDTreeDecomposer.cpp  HTDTreeDecomposer.h  HeightFitnessFunction.cpp  HeightFitnessFunction.h  InverseNSFSizeJoinEstimationFitnessFunction.cpp  InverseNSFSizeJoinEstimationFitnessFunction.h  JoinNodeBagExponentialFitnessFunction.cpp  JoinNodeBagExponentialFitnessFunction.h  JoinNodeBagFitnessFunction.cpp  JoinNodeBagFitnessFunction.h  JoinNodeChildBagFitnessFunction.cpp  JoinNodeChildBagFitnessFunction.h  JoinNodeChildBagProductFitnessFunction.cpp  JoinNodeChildBagProductFitnessFunction.h  JoinNodeChildCountFitnessFunction.cpp  JoinNodeChildCountFitnessFunction.h  JoinNodeChildRememberedProductFitnessFunction.cpp  JoinNodeChildRememberedProductFitnessFunction.h  JoinNodeCountFitnessFunction.cpp  JoinNodeCountFitnessFunction.h  JoinNodeFitnessFunction.cpp  JoinNodeFitnessFunction.h  LeafNodeCountFitnessFunction.cpp  LeafNodeCountFitnessFunction.h  NSFSizeEstimationFitnessFunction.cpp  NSFSizeEstimationFitnessFunction.h  NSFSizeJoinEstimationFitnessFunction.cpp  NSFSizeJoinEstimationFitnessFunction.h  RemovedLevelFitnessFunction.cpp  RemovedLevelFitnessFunction.h  SingleNodeDecomposer.cpp  SingleNodeDecomposer.h  VariableLevelFitnessFunction.cpp  VariableLevelFitnessFunction.h  WidthFitnessFunction.cpp  WidthFitnessFunction.h
src/nsf/: CacheComputation.cpp  CacheComputation.h  CompressedComputation.cpp  CompressedComputation.h  Computation.cpp  Computation.h  ComputationManager.cpp  ComputationManager.h  DependencyCacheComputation.cpp  DependencyCacheComputation.h  NSF.cpp  NSF.h  SimpleDependencyCacheComputation.cpp  SimpleDependencyCacheComputation.h  StandardDependencyCacheComputation.cpp  StandardDependencyCacheComputation.h
src/options/: Choice.cpp  Choice.h  Condition.h  DefaultIntegerValueOption.cpp  DefaultIntegerValueOption.h  HelpObserver.cpp  HelpObserver.h  MultiValueOption.cpp  MultiValueOption.h  Observer.h  Option.cpp  Option.h  OptionHandler.cpp  OptionHandler.h  SingleValueOption.cpp  SingleValueOption.h  ValueOption.cpp  ValueOption.h
src/ordering/: InstanceOrdering.cpp  InstanceOrdering.h  LevelInverseOrdering.cpp  LevelInverseOrdering.h  LevelOrdering.cpp  LevelOrdering.h  LexicographicalOrdering.cpp  LexicographicalOrdering.h  MaxBagOrdering.cpp  MaxBagOrdering.h  MaxClauseOrdering.cpp  MaxClauseOrdering.h  MinCutOrdering.cpp  MinCutOrdering.h  MinDegreeOrdering.cpp  MinDegreeOrdering.h
src/parser/: DIMACSDriver.cpp  DIMACSDriver.h
src/preprocessor/: CNF3Preprocessor.cpp  CNF3Preprocessor.h  CombinedPreprocessor.cpp  CombinedPreprocessor.h  NoPreprocessor.cpp  NoPreprocessor.h  SplitPreprocessor.cpp  SplitPreprocessor.h  UnitLiteralPreprocessor.cpp  UnitLiteralPreprocessor.h
src/printer/: Debug.cpp  Debug.h  Performance.cpp  Performance.h  Progress.cpp  Progress.h  Quiet.cpp  Quiet.h  Verbose.cpp  Verbose.h
src/solver/bdd/qsat/: QSat2CNFEDMSolver.cpp  QSat2CNFSolver.h  QSat2CNFSolverFactory.cpp  QSat2CNFSolverFactory.h  QSatBDDSolver.cpp  QSatBDDSolver.h  QSatBDDSolverFactory.cpp  QSatBDDSolverFactory.h  QSatCNFEDMSolver.cpp  QSatCNFEDMSolver.h  QSatCNFEDMSolver2.cpp  QSatCNFEDMSolverFactory.cpp  QSatCNFEDMSolverFactory.h  QSatCNFLDMSolver.cpp  QSatCNFLDMSolver.h  QSatCNFLDMSolverFactory.cpp  QSatCNFLDMSolverFactory.h  QSatCNFSolver.h  QSatCNFSolverFactory.cpp  QSatCNFSolverFactory.h
src/solver/dummy/: DummySolver.cpp  DummySolver.h  SolverFactory.cpp  SolverFactory.h
